--- a/spec/Parallelism_and_Synchronization.tex
+++ b/spec/Parallelism_and_Synchronization.tex
@@ -332,8 +332,8 @@ all computations with pending uses resume in an unspecified order.  A
 single variable is specified with a single type given by the following
 syntax:
 \begin{syntax}
- single-type:
-   `single' type
+single-type:
+  `single' type
 \end{syntax}
 
 \begin{example}
@@ -436,7 +436,7 @@ A sync variable is specified with a sync type given by the following
 syntax:
 \begin{syntax}
 sync-type:
-  `sync'
+  `sync' type
 \end{syntax}
 
 \subsubsection{Additional Synchronization Variable Functions}
