--- a/spec/spec.tex
+++ b/spec/spec.tex
@@ -194,6 +194,9 @@ Seattle, WA 98104}
 \cleardoublepage
 \input{Standard_Modules}
 \cleardoublepage
+\appendix
+\input{Syntax}
+\cleardoublepage
 \input{spec.ind}
 
 \end{document}
