--- a/spec/syntax_listing.tex
+++ b/spec/syntax_listing.tex
@@ -15,5 +15,6 @@
   }
 
 \lstnewenvironment{syntax}{\lstset{language=syntax,xleftmargin=2pc}}{}
+\lstnewenvironment{syntax_donotcollect}{\lstset{language=syntax,xleftmargin=2pc}}{}
 
 \newcommand{\sntx}[1]{\lstinline[language=syntax]!#1!}
