Changed TQUESTION to ? in syntax.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@12777 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Functions.tex
+++ b/spec/Functions.tex
@@ -37,14 +37,14 @@ formal:
 
 formal-type:
   : type
-  : TQUESTION identifier
+  : ? identifier
 
 default-expression:
   = expression
 
 variable-argument-expression:
   ... expression
-  ... TQUESTION identifier
+  ... ? identifier
 
 formal-tag: one of
   in out inout param type
